# TrajoptLib

./: .gitignore  .styleguide  CMakeCache.txt  CMakeLists.txt  Cargo.toml  README.md  build.rs  example-casadi.json  example-sleipnir.json  example.json  set2d.txt  settings.gradle.kts
helixtrajectorycpp/: CMakeLists.txt  build.gradle.kts  build.gradle.kts.old  build.gradle.old
helixtrajectorycpp/src/: CMakeLists.txt  Drive.cpp  Drive.h  Drivetrain.cpp  Drivetrain.h  HolonomicDrive.cpp  HolonomicDrive.h  HolonomicDrivetrain.h  HolonomicPath.cpp  HolonomicPath.h  HolonomicTrajectory.cpp  HolonomicTrajectory.h  HolonomicTrajectoryGenerator.cpp  HolonomicTrajectoryGenerator.h  HolonomicTrajectorySample.cpp  HolonomicTrajectorySample.h  HolonomicTrajectorySegment.cpp  HolonomicTrajectorySegment.h  HolonomicWaypoint.cpp  InitialGuessPoint.cpp  InitialGuessPoint.h  JNI.cpp  Main.cpp  Obstacle.cpp  Obstacle.h  ObstaclePoint.cpp  OptimalHolonomicTrajectoryGenerator.cpp  OptimalHolonomicTrajectoryGenerator.h  OptimalTrajectoryGenerator.cpp  OptimalTrajectoryGenerator.h  Path.cpp  Path.h  SwerveDrive.cpp  SwerveDrive.h  SwerveDrivetrain.cpp  SwerveDrivetrain.h  SwerveModule.cpp  SwerveModule.h  Trajectory.cpp  Trajectory.h  (+11 more)
helixtrajectorycpp/src/cpp/: CMakeLists.txt  CasADiHolonomicTrajectoryOptimizationProblem.cpp  CasADiHolonomicTrajectoryOptimizationProblem.h  CasADiOpti.h  CasADiOptimizer.h  CasADiSwerveTrajectoryOptimizationProblem.cpp  CasADiSwerveTrajectoryOptimizationProblem.h  CasADiTrajectoryOptimizationProblem.cpp  CasADiTrajectoryOptimizationProblem.h  DebugOptions.h  Drivetrain.cpp  HolonomicDrivetrain.cpp  HolonomicPath.cpp  HolonomicTrajectory.cpp  HolonomicTrajectoryOptimizationProblem.cpp  HolonomicTrajectoryOptimizationProblem.h  HolonomicTrajectorySample.cpp  HolonomicTrajectorySegment.cpp  HolonomicVectorConstraintSet.cpp  HolonomicVelocityConstraint.cpp  HolonomicWaypoint.cpp  IncompatibleTrajectoryException.cpp  InfeasibleTrajectoryException.cpp  InitialGuessPoint.cpp  InvalidPathException.cpp  JNI.cpp  Main.cpp  Obstacle.cpp  ObstaclePoint.cpp  OptimalTrajectoryGenerator.cpp  Path.cpp  PlanarBound.cpp  PolarVectorBound.cpp  RectangularVectorBound.cpp  SE2Constraint.cpp  ScalarBound.cpp  SwerveDrivetrain.cpp  SwerveModule.cpp  SwerveTrajectoryOptimizationProblem.cpp  SwerveTrajectoryOptimizationProblem.h  (+11 more)
helixtrajectorycpp/src/cpp/constraint/: AngularVelocityConstraint.cpp  Constraint.cpp  HeadingConstraint.cpp  HolonomicAccelerationConstraint.cpp  HolonomicConstraint.cpp  ObstacleConstraint.cpp  PlanarBound.cpp  PoseConstraint.cpp  PositionConstraint.cpp  TranslationConstraint.cpp  VelocityConstraint.cpp  VelocityHolonomicConstraint.cpp
helixtrajectorycpp/src/cpp/drivetrain/: Drivetrain.cpp  HolonomicDrivetrain.cpp  SwerveDrivetrain.cpp  SwerveModule.cpp
helixtrajectorycpp/src/cpp/obstacle/: Obstacle.cpp  ObstaclePoint.cpp
helixtrajectorycpp/src/cpp/optimization/: CasADiOpti.cpp  CasADiOpti.h  HolonomicTrajectoryOptimizationProblem.cpp  HolonomicTrajectoryOptimizationProblem.h  HolonomicTrajectoryOptimizationProblem.inc  SleipnirOpti.cpp  SleipnirOpti.h  SwerveTrajectoryOptimizationProblem.cpp  SwerveTrajectoryOptimizationProblem.h  SwerveTrajectoryOptimizationProblem.inc  TrajectoryOptimizationProblem.cpp  TrajectoryOptimizationProblem.h  TrajectoryOptimizationProblem.inc
helixtrajectorycpp/src/cpp/path/: HolonomicPath.cpp  HolonomicWaypoint.cpp  InitialGuessPoint.cpp  Path.cpp  Waypoint.cpp
helixtrajectorycpp/src/cpp/set/: ConeSet2d.cpp  EllipticalSet2d.cpp  IntervalSet1d.cpp  LinearSet2d.cpp  RectangularSet2d.cpp  Set2d.cpp  setnotation.txt
helixtrajectorycpp/src/cpp/trajectory/: HolonomicState.cpp  HolonomicTrajectory.cpp  HolonomicTrajectorySample.cpp  State.cpp  Trajectory.cpp  TrajectorySample.cpp
helixtrajectorycpp/src/include/: Drivetrain.h  HolonomicAccelerationConstraint.h  HolonomicDrivetrain.h  HolonomicPath.h  HolonomicTrajectory.h  HolonomicTrajectorySample.h  HolonomicTrajectorySegment.h  HolonomicVectorConstraintSet.h  HolonomicVelocityConstraint.h  HolonomicWaypoint.h  IncompatibleTrajectoryException.h  InfeasibleTrajectoryException.h  InitialGuessPoint.h  InvalidPathException.h  Obstacle.h  ObstaclePoint.h  OptimalTrajectoryGenerator.h  Path.h  PlanarBound.h  PolarVectorBound.h  PositionConstraint.h  RectangularVectorBound.h  SE2Constraint.h  ScalarBound.h  SwerveDrivetrain.h  SwerveModule.h  Trajectory.h  TrajectoryError.h  TrajectoryGenerationException.h  TrajectorySample.h  TrajectorySegment.h  VectorBound.h  Waypoint.h
helixtrajectorycpp/src/include/constraint/: AngularVelocityConstraint.h  Constraint.h  FieldRelativeVelocityHolonomicConstraint.h  HeadingConstraint.h  HolonomicAccelerationConstraint.h  HolonomicConstraint.h  HolonomicVelocityConstraint.h  ObstacleConstraint.h  PlanarBound.h  PolarBound.h  PoseConstraint.h  PositionConstraint.h  RectangularBound.h  ScalarBound.h  TranslationConstraint.h  VelocityConstraint.h  VelocityHolonomicConstraint.h
helixtrajectorycpp/src/include/drivetrain/: Drivetrain.h  HolonomicDrivetrain.h  SwerveDrivetrain.h  SwerveModule.h
helixtrajectorycpp/src/include/obstacle/: Obstacle.h  ObstaclePoint.h
helixtrajectorycpp/src/include/path/: HolonomicPath.h  HolonomicWaypoint.h  InitialGuessPoint.h  Path.h  Waypoint.h
helixtrajectorycpp/src/include/set/: ConeSet2d.h  EllipticalSet2d.h  IntervalSet1d.h  LinearSet2d.h  RectangularSet2d.h  Set2d.h
helixtrajectorycpp/src/include/solution/: HolonomicSolution.h  Solution.h  SolutionChecking.h  SwerveSolution.h
helixtrajectorycpp/src/include/trajectory/: HolonomicState.h  (+8 more)
node/: .styleguide  CMakeLists.txt  package-lock.json  package.json  trajoptlib.js
node/src/: Addon.cc  Addon.cpp  NB.cc  SwervePathBuilderWrap.cc  SwervePathBuilderWrap.cpp  SwervePathBuilderWrap.h
rust/: .styleguide  Cargo.toml  README.md  build.rs
rust/cpp/: CMakeLists.txt
rust/cpp/include/: mylibrary.h
rust/cpp/src/: mylibrary.cpp
rust/examples/: myexamp.rs  swerve.rs
rust/include/: trajoptlib.h
rust/src/: lib.rs  main.rs  trajoptlib.cc  trajoptlib.cpp
(+434 files in other folders)
