[package]
name = "trajoptlib"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"

[lib]
name = "trajoptlib"
crate-type = ["lib"]

[features]
default = []
sleipnir = []
casadi = []

[[example]]
name = "swerve"
