[package]
name = "trajoptlib"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cxx-build = "1.0"
miette = { version = "5", features = ["fancy"] } # gives nicer error messages!
cmake = "0.1"

[lib]
name = "trajoptlib"

[[example]]
name = "swerve"
